Fix double scrollbar issue

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -45,8 +45,6 @@ a:visited {
 #content {
   min-height: 80%;
   padding: 9rem 40px 40px;
-  max-height: 100%;
-  overflow-y: scroll;
   @media screen and (max-width: 786px) {
     padding: 8em 40px 40px;
   }
