--- a/_sass/_practicing.scss
+++ b/_sass/_practicing.scss
@@ -12,7 +12,7 @@
   margin: 1%;
   min-width: 300px;
   box-shadow: 1px 0 2px #333;
-  padding: 1em 0 4em;
+  padding: 0em 0 4em;
   @media screen and (max-width: 768px) {
     width: 100%;
     box-shadow: none;
